Fix logo being squished in about section

--- a/src/pages/aboutBlock.css
+++ b/src/pages/aboutBlock.css
@@ -1,7 +1,7 @@
 
 .aboutContainer {
     width: 100%;
-    padding: 20px;
+    padding: 20px 20px 40px 20px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
